# bashlings

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  release.yml
.solutions/01_intro/: intro3.sh  intro5.sh
.solutions/02_navigation/: nav4.sh  nav5.sh  nav6.sh  nav7.sh
.solutions/03_pipes/: pipe1.sh  pipe2.sh  pipe3.sh  pipe4.sh  pipe5.sh  pipe6.sh  pipe7.sh  pipe8.sh
.solutions/04_text/: text3.sh  text4.sh
.solutions/05_scripting/: script2.sh  script5.sh
.solutions/06_functions/: func1.sh  func2.sh  func4.sh  func5.sh  func6.sh
.solutions/07_arrays/: arr1.sh  arr2.sh  arr5.sh
.solutions/08_text_advanced/: awk1.sh  awk3.sh  sed1.sh  sed2.sh  sed3.sh
.solutions/09_traps/: trap1.sh  trap2.sh  trap3.sh  trap4.sh
.solutions/10_robust/: rob2.sh  rob4.sh  rob5.sh
.solutions/11_network/: net1.sh  net2.sh  net3.sh  net4.sh  net5.sh  net6.sh  net7.sh
.solutions/12_ssh/: ssh1.sh  ssh2.sh  ssh3.sh  ssh4.sh  ssh5.sh  ssh6.sh  ssh7.sh
.solutions/13_jq/: jq2.sh  jq6.sh
.solutions/14_cron/: cron1.sh  cron2.sh  cron3.sh  cron4.sh  cron5.sh  cron6.sh  cron7.sh
.solutions/15_docker/: docker1.sh  docker2.sh  docker3.sh  docker4.sh  docker5.sh  docker6.sh  docker7.sh
.solutions/16_cicd/: cicd1.sh  cicd2.sh  cicd3.sh  cicd4.sh  cicd5.sh  cicd6.sh  cicd7.sh
cli/: Cargo.toml  README.md
cli/Formula/: bashlings.rb
cli/src/: i18n.rs  info.rs  main.rs  state.rs  style.rs  test.rs
cli/src/commands/: hint.rs  list.rs  mod.rs  next.rs  progress.rs  reset.rs  run.rs  solution.rs  verify.rs  watch.rs
cli/tests/: cli.rs
docs/: foreword.md  glossary.md  index.md  resources.md  setup.md
docs/.vitepress/: config.ts
docs/en/: foreword.md  glossary.md  index.md  resources.md  setup.md
docs/part1/: 01-introduction.md  02-navigation.md  03-pipes-redirection.md  04-text-processing.md  (+1 more)
exercises/: README.md  info.toml
scripts/: install.sh  record-demo.sh  test-solutions.sh  update-formula.sh
(+377 files in other folders)
